--- a/NoteBook/index.html
+++ b/NoteBook/index.html
@@ -5,13 +5,36 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NoteBook</title>
+  <link rel="stylesheet" href="./font/iconfont.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div class="content">
-    <div class="left">本子</div>
+    <!-- 笔记本陈列架 start -->
+    <div class="left">
+      <div class="title"><h1>笔记本</h1></div>
+      <div class="notebookName">
+        <ul>
+          <li>前端(156)</li>
+          <li>服务器(80)</li>
+          <li>小说(26)</li>
+          <li>番剧(33)</li>
+          <li>阅读(99)</li>
+          <li>音乐(16)</li>
+        </ul>
+      </div>
+      <div class="addNote"><i class="iconfont icon-xianshi_tianjia"></i></div>
+      <div class="delNote"><i class="iconfont icon-shanchu"></i></div>
+    </div>
+    <!-- 笔记本陈列架 end -->
+
+    <!-- 当前笔记本目录区域 start -->
     <div class="center">目录</div>
+    <!-- 当前笔记本目录区域 end -->
+
+    <!-- 当前笔记内容区域 start -->
     <div class="right">内容</div>
+    <!-- 当前笔记内容区域 end -->
   </div>
 </body>
 </html>
