--- a/NoteBook/index.html
+++ b/NoteBook/index.html
@@ -29,7 +29,24 @@
     <!-- 笔记本陈列架 end -->
 
     <!-- 当前笔记本目录区域 start -->
-    <div class="center">目录</div>
+    <div class="center">
+      <div class="title">
+        <h1>笔记</h1>
+        <div class="editNote">新建笔记<i class="iconfont icon-yongyan"></i></div>
+      </div>
+      <div class="summary">
+        <ul>
+          <li>
+            <div class="title">我的二本学生</div>
+            <p>和家族其他成员一样，父母极为重视辛追的教育，在辛追的家族里，和他同龄的孩子，上大学是一种常见的现象。和他同龄的大伯家儿子，甚至念到了美国一所大学的博士，还有在中国矿业大学读书的。辛追相比别的孩子，自小就显露出对阅读的特别兴趣，在辛追的印象中，整个家族特别期待他上大学，尤其是妈妈，在他很小时，就一次次鼓励他考北大，“北大好啊，你到北大去，妈妈就来北大看你呀”。</p>
+          </li>
+          <li>
+            <div class="title">我的天才女友</div> 
+            <p>三十多年前，她就告诉我她想消失，不留任何痕迹。只有我知道她想表达什么。她从来都没想过逃离；从来没想过改变身份，在别处重新开始生活；她从来没想过自杀，因为一想到里诺不得不处理她的尸体，她就打消了这个念头。她的目标不是这些，而是别的：她想从人间蒸发；她想让自己的每一个细胞都消失，让关于自己的一切都无迹可寻。因为我十分了解她，至少我认为我了解她，我觉得她一定找到了办法——不留一丝毛发、从这个世界消失的办法。</p>
+          </li>
+        </ul>
+      </div>
+    </div>
     <!-- 当前笔记本目录区域 end -->
 
     <!-- 当前笔记内容区域 start -->
