--- a/NoteBook/index.html
+++ b/NoteBook/index.html
@@ -50,7 +50,58 @@
     <!-- 当前笔记本目录区域 end -->
 
     <!-- 当前笔记内容区域 start -->
-    <div class="right">内容</div>
+    <div class="right">
+      <div class="top">
+        <div class="title">我的天才女友</div>
+      </div>
+      <div class="content">
+        <p>
+          一、引子
+她的目标不是这些，而是别的：她想从人间蒸发；她想让自己的每一个细胞都消失，让关于自己的一切都无迹可寻。
+
+二、童年
+1、我想象他由一些难以描述的材料构成：铁、玻璃和荨麻。
+她觉得自己在做一件该做的事情，而我忘记了我出现在那里的原因。唯一可以肯定的是：我在那里是因为她在那里。
+我们慢慢走向那些年我们最害怕的人，我们去探索、审问自己的恐惧。
+2、无论是向上还是向下，我们都觉得我嘛在走向恐惧。尽管这些恐惧的事情在我们出生之前就存在了，但它们一直在等着我们。
+当时，我们来到这个世界上没多久，很难搞清楚哪些是灾难，哪些是灾难的源头，可能也觉得没必要了解这些。那些大人呢？他们在期待“明天”，在“现在”活动，“现在”之前有一个“昨天”，或者“前天”，所有一切都在“当下”：……
+3、我们的世界就是这样，充满了致命的词汇：哮喘、破伤风、毒气、战争、机床、废墟、工作、轰炸、炸弹、肺结核和传染。那些年听到的这些词汇陪伴了我一辈子，是我很多恐惧和担忧的根源。
+在我的生命里，我做了很多自己都不是很肯定的事情，我觉得自己的所作所为有时候很盲目，缺乏连贯性。
+4、血，一般是经过激烈的争吵和肮脏的辱骂之后，才从伤口里流出来，事情总是按照这个顺序来的。
+之前的事情，通常都是一些搞不清楚的事情，大人们不说，或者说的时候也闪烁其词。
+5、我一点也不怀念我们的童年，因为我们的童年充满了暴力。在我们身上，在家里，在外面，每天都会发生各种事情。但我记得，我那时从来没觉得我嘛遭遇的生活很糟糕，生活就是这样，这很正常。我们在成长的过程中习得的一个责任就是，在别人使我们的生活变得艰难之前，我们不得不使她们的生活更加艰难。
+伤害是一种疾病。从小我就想象有一种很微小的动物，肉眼几乎看不见，会在夜晚来到我们的住宅区……她们比男人更容易感染这种病，男人不断发火，最后他们会平息下来，但是女人呢，她们表面上很安静，心平气和，但她们会愤怒到底，停不下来。
+8、也有可能这就是我应对嫉妒和仇恨、压制这些情感的方式，或者说那是对我的自卑和感受到的魅力的一种伪装。当然，我很容易就忍受了莉拉的霸道，还有她的欺负。
+10、对于我来说，我的玩偶是有生命的，地下室下面，居住着成千上万个凶残的动物，现在娃娃在下面，这让我无比的绝望，但在那时候，虽然我的眼里全是泪花，但我学会了一样东西——一样后来我非常擅长的本领，就是抑制我的绝望。
+16、天气好的时候，如果我们一直走到铁轨那里，穿过一些低矮的房子，凝灰岩墙，还有浓密的树林，我们就能看到维苏威山，那是一座火山，一座蓝色的山脉，有一高一低两个山顶。
+我沉浸在自己的快乐里，我记得有一种淡淡的光，好像来自大地深处，而不是来自天空，但从表面上看来，这种光是一种贫穷、肮脏的光。
+
+三、青春期
+1、“界限消失”——她说，在那种情况下，人和事物之间的界限忽然就消失了。……她感觉到一种东西，一种非常具体的存在，围绕在她和其他人，以及所有事情周围，之前她一直都没有感觉到。现在这种存在正在打破周围的人和事，显露出自己的面目。
+6、这是一种可能：要成为事实，那应该产生真正的感情。
+我们就像两个老太太一样，在总结自己充满失望的人生。我们手拉着手，没有人能理解我们，只有我们相互了解。
+8、她想要改变现状，还是同样的话题：我们应该从穷人变成富人，从一无所有到拥有一切。
+13、我希望能激起她的好奇心，让她渴望了解我在外面的生活，让她也介入我的体验，让她也感觉到，她正在失去我的一部分，就像我担心失去她一样。
+14、那有什么办法呢，那不勒斯一直都是这样：分割、打碎又重建、钱就流动起来，创造劳动的机会。
+父亲紧紧抓住我的手，好像害怕我溜走一样。实际上，我的确想松开他的手，奔跑起来，穿过大路，奔向波光粼粼的大海。
+在这个让人震惊的时刻，四处充满了阳光和大海的喧哗，我假装一个人在一座陌生的城市，就像一个全新的我在面对自己的新生。一种全新的生活，从死气沉沉的事物中突然展现出来，我一定能把握住这种新生。我和莉拉，我们在一起战无不胜——我们只有在一起，才能捕捉到那些颜色和声音，还有那些人和事。我们可以讲述故事，赋予那些故事力量。
+18、她说：假如没有爱情，不仅人们的生活会变得枯燥，整个城市的生活也会变的无聊。
+22、我之前已经提到过了，她将那天发生在她身上的事称为“界限消失”。她告诉我，那就好像一个海上的月圆之夜，忽然天空乌云密布，暴风雨来临，吞没了所有光亮，把那轮皎洁的圆盘打回了原形，让它变成了一团没有任何意义的粗糙物质。
+30、这是一种比较久远的担忧，一种从来没有过的恐怖：我担心错过她生命的一些片段，失去她的关注，以及我在她生命中的位置。
+33、她脆弱的神经无法再适应没有他的生活，那种荒芜平庸的生活。
+34、在读她的信时，我感觉自己能看到、听到她，她的文字传递着她的声音这让我感觉很震撼。这比我们面对面交谈更吸引我，因为写出来的东西要比交谈时更加纯净，去掉了口语中那些混乱的东西，文字栩栩如生。
+35、现在，她赋予铜锅一种咄咄逼人的感觉，就像她所面临的难以抉择的处境，她让一把铜锅炸了，像一种暗示，就好像那口锅忽然决定自己裂开。
+39、这些想象完全褪色了，也许现在对我们来说：金钱就像水泥，可以加固我的生命，可以防止我们的生命和我最亲爱的人一起溃散，这种感觉越来越强了。但财富最根本的特征已经开始慢慢具体化了，称为每天的生活，称为生意和洽谈。
+48、最后，老师说了一句让我至今还记得很清楚的话：“赛鲁罗小时候头脑的聪慧没有找到出口，格雷科，最后她的美丽展现在脸蛋和胸上，还有大腿和屁股上——那些美在这些地方都会昙花一现，就像从来没拥有过一样。”
+52、我把我从学校学到的修辞技艺运用到了这里，办法就是：每一次当你不知道怎么回答问题时，你要在前言部分长篇大论，要用一种非常确信的声音分析问题，就好像自己知道结论一样。（莉拉称之为用言语捉弄人）
+57、我从来都没看到过她全裸的样子，这让我有些难为情。现在看来，当时我的尴尬是因为自己被她完美的身体所吸引，我见证了她十六岁时的美丽，因为在几小时之后，斯特凡诺就会抚摸她、进入她、改变她，可能会让她怀孕。
+但最后，唯一一个挥之不去想法是：在大清早，我从头到脚把她清洗干净，晚上斯特凡诺会把她彻底玷污。
+59、在开向贺拉斯街的那段路上，我开始明显地感觉到，自己和其他人格格不入，这让我很不开心。我和那些孩子一起长大，我觉得他们的做法非常正常，他们充满暴力的语言也属于我的世界，但是我的日常生活却走上了另外一条道路。
+60、我错了，莉拉还是留在了那里，她受制于那个世界的生活方式，并认为自己已经获得了最好的安置，那个年轻男人是她在这个世界里最好的选择。
+她的生活和我的求学之路，已经没有任何共同之处了。忽然间我觉得非常孤单。
+        </p>
+      </div>
+    </div>
     <!-- 当前笔记内容区域 end -->
   </div>
 </body>
